# geParticle

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/DemoApp/: CMakeLists.txt  CameraSingleton.cpp  CameraSingleton.h  ExampleManager.cpp  ExampleManager.h  OpenGLWindow.cpp  OpenGLWindow.h  SimpleExample.cpp  SimpleExample.h  SimpleExampleRenderer.cpp  SimpleExampleRenderer.h  main.cpp
examples/DemoApp/examples/Common/: SimpleExampleRenderer.cpp  SimpleExampleRenderer.h  TextureHelper.cpp  TextureHelper.h
examples/DemoApp/examples/EmittersTestExample/: EmittersTestExample.cpp  EmittersTestExample.h
examples/DemoApp/examples/FireworkExample/: ExplosionAffector.cpp  ExplosionAffector.h  ExplosionEmitter.cpp  ExplosionEmitter.h  FireworkExample.cpp  FireworkExample.h  FireworkRenderer.cpp  FireworkRenderer.h  TrailAffector.cpp  TrailAffector.h  TrailEmitter.cpp  TrailEmitter.h
examples/DemoApp/examples/GPUNbodyExample/: GPUNbodyExample.cpp  GPUNbodyExample.h  GPUNbodyRenderer.cpp  GPUNbodyRenderer.h
examples/DemoApp/examples/GPURainExample/: GPUPlaneEmitter.cpp  GPUPlaneEmitter.h  GPURainExample.cpp  GPURainExample.h  GPURainRenderer.cpp  GPURainRenderer.h
examples/DemoApp/examples/SimpleExample/: SimpleExample.cpp  SimpleExample.h
examples/DemoApp/resources/: texturedBillboardFS.glsl
examples/DemoApp/resources/Firework/: fireworkVertexShader.glsl
examples/DemoApp/resources/GPUNbody/: affector.glsl
examples/DemoApp/resources/GPURain/: affector.glsl  billboardGeometryShader.glsl  emitter.glsl  vertexShader.glsl
examples/DemoApp/resources/Simple/: billboardGeometryShader.glsl  fragmentShader.glsl  texturedBillboardFS.glsl  vertexShader.glsl
examples/DemoApp/resources/textures/: smoke.dds
examples/GPU_Example/: CMakeLists.txt  OpenGLWindow.cpp
examples/GPU_Example/particles/: BallGPUEmitter.cpp  BallGPUEmitter.h  PSManager.cpp  PSManager.h  SimpleParticleRenderer.cpp  SimpleParticleRenderer.h
examples/GPU_Example/resources/shaders/: affector.glsl  billboardGeometryShader.glsl  emitter.glsl  vertexShader.glsl
examples/GPU_Example/utils/: Camera.h
examples/GPU_nbody_sim/: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h
examples/GPU_nbody_sim/particles/: BallGPUEmitter.h  PSManager.cpp  PSManager.h  SimpleParticleRenderer.cpp
examples/GPU_nbody_sim/resources/shaders/: affector.glsl  billboardGeometryShader.glsl  fragmentShader.glsl  vertexShader.glsl
examples/Simple_Particles/: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h  fragmentShader.glsl  main.cpp  vertexShader.glsl
examples/Simple_Particles2/: BillboardVertices.h  CMakeLists.txt  Camera.cpp  ComponentSystemPSManager.cpp  ComponentSystemPSManager.h  ComponentSystemRenderer.cpp  ComponentSystemRenderer.h  CustomTypes.h  OpenGLWindow.cpp  OpenGLWindow.h  PSManager.cpp  PSManager.h  SimpleParticleRenderer.cpp  SimpleParticleRenderer.h  billboardVertexShader.glsl  fragmentShader.glsl
geParticle/: CMakeLists.txt
geParticle/src/geParticle/: AoSParticleFactory.h  ArrayOfStructsContainer.h  BasicParticleEmitter.cpp  BasicParticleEmitter.h  ComponentPool.h  ComponentSystemContainer.cpp  ComponentSystemContainer.h  ComputeProgramWrapper.cpp  ComputeProgramWrapper.h  ConstantRateEmitter.h  Counter.h  GPUParticleAffector.h  GPUParticleContainer.cpp  GPUParticleContainer.h  GPUParticleEmitter.h  Particle.h  ParticleAffector.h  ParticleContainer.h  ParticleContainerIterator.cpp  ParticleContainerIterator.h  ParticleContainerType.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterBase.cpp  ParticleEmitterBase.h  ParticleFactory.h  ParticleInitiator.h  ParticleIterator.h  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemManager.cpp  ParticleSystemManager.h  PointEmitter.h  SimpleArrayOfStructsContainer.cpp  SimpleArrayOfStructsContainer.h  SoAParticleFactory.h  StandardParticleAffectors.h  StandardParticleComponents.h
geParticleGL/: CMakeLists.txt
geParticleGL/src/geParticleGL/: ComputeProgramWrapper.cpp  ComputeProgramWrapper.h  GPUParticleAffector.cpp  GPUParticleAffector.h  GPUParticleContainer.cpp  GPUParticleContainer.h  GPUParticleEmitter.cpp  GPUParticleEmitter.h
geParticleStd/: CMakeLists.txt
geParticleStd/src/geParticleStd/: BallEmitter.cpp  BallEmitter.h  BoxEmitter.cpp  BoxEmitter.h  ColorAffector.cpp  ColorAffector.h  ColorInitiator.cpp  ColorInitiator.h  ConstantRateCounter.cpp  ConstantRateCounter.h  FloorAffector.cpp  FloorAffector.h  GravityAffector.cpp  GravityAffector.h  LifeTimeAffector.cpp  LifeTimeAffector.h  LifeTimeInitiator.cpp  LifeTimeInitiator.h  LinearMovementAffector.cpp  LinearMovementAffector.h  PointEmitter.cpp  PointEmitter.h  StandardEmitter.cpp  StandardEmitter.h  StandardParticleAffectors.h  StandardParticleComponents.h  VelocityInitiator.cpp  VelocityInitiator.h
